Rebranded app to CODEBLUER with new Star of Life logo and PWA updates

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MedicConnect",
-  "short_name": "MedicConnect",
+  "name": "CODEBLUER",
+  "short_name": "CODEBLUER",
   "description": "Professional community for EMTs & Paramedics",
   "start_url": "/",
   "display": "standalone",
