Branding: Updated app tagline to EMR COMMUNITY throughout the application

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "CODEBLUER",
   "short_name": "CODEBLUER",
-  "description": "Professional community for EMTs & Paramedics",
+  "description": "EMR COMMUNITY",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
